# pythonProject1

./: pyproject.toml
